--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
     "root": true,
     "parser": "@typescript-eslint/parser",
+    "extends": "@antfu",
     "parserOptions": {
         "ecmaVersion": 6,
         "sourceType": "module"
