--- a/.npmrc
+++ b/.npmrc
@@ -1,1 +1,4 @@
 enable-pre-post-scripts = true
+ignore-workspace-root-check = true
+node-linker = hoisted
+registry = https://registry.npm.taobao.org
