--- a/package.json
+++ b/package.json
@@ -1,43 +1,243 @@
 {
   "name": "one-vscode",
   "displayName": "one-vscode",
-  "description": "",
   "version": "0.0.1",
-  "engines": {
-    "vscode": "^1.78.0"
-  },
+  "description": "",
   "categories": [
-    "Other"
+    "Other",
+    "Themes",
+    "Snippets",
+    "Keymaps",
+    "Programming Languages",
+    "Extension Packs",
+    "Debuggers",
+    "Formatters",
+    "Linters",
+    "SCM Providers",
+    "Language Packs"
   ],
-  "activationEvents": [],
-  "main": "./out/extension.js",
+  "keywords": [
+    "vscode",
+    "extension"
+  ],
+  "homepage": "https://github.com/JuckZ/one-vscode#readme",
+  "bugs": {
+    "url": "https://github.com/JuckZ/one-vscode/issues",
+    "email": "juckz@foxmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JuckZ/one-vscode.git"
+  },
+  "license": "SEE LICENSE IN LICENSE",
+  "author": "Juck",
+  "main": "./dist/extension.js",
+  "files": [
+    "dist",
+    "package.json",
+    "README.md",
+    "images/icon.png"
+  ],
+  "scripts": {
+    "build": "tsup src/extension.ts --external vscode",
+    "dev": "nr build --watch",
+    "lint": "eslint \"src/**/*.ts\"",
+    "lint1": "eslint . --fix",
+    "pack": "vsce package --no-dependencies",
+    "publish": "vsce publish --no-dependencies",
+    "release": "bumpp && nr publish",
+    "pretest": "nr build && nr lint",
+    "test": "vitest",
+    "test1": "node ./out/test/runTest.js",
+    "typecheck": "tsc --noEmit",
+    "vscode:prepublish": "nr build"
+  },
   "contributes": {
     "commands": [
       {
         "command": "one-vscode.helloWorld",
         "title": "Hello World"
+      },
+      {
+        "command": "one-vscode.commentLine",
+        "title": "Comment Line"
+      },
+      {
+        "command": "one-vscode.printDefinitionsForActiveEditor",
+        "title": "Print Definitions For ActiveEditor",
+        "icon": {
+          "light": "resources/light/refresh.svg",
+          "dark": "resources/dark/refresh.svg"
+        }
       }
-    ]
+    ],
+    "configuration": {},
+    "extensionDependencies": [],
+    "extensionPack": [
+      "publisher.extensionName"
+    ],
+    "grammars": [
+      {
+        "language": "",
+        "scopeName": "",
+        "path": "./syntaxes/.tmLanguage.json"
+      }
+    ],
+    "iconThemes": [
+      {
+        "id": "turtles",
+        "label": "Turtles",
+        "path": "./fileicons/turtles-icon-theme.json"
+      }
+    ],
+    "keybindings": [
+      {
+        "key": "ctrl+.",
+        "command": "workbench.action.showCommands"
+      }
+    ],
+    "languages": [
+      {
+        "id": "",
+        "aliases": [
+          "",
+          ""
+        ],
+        "extensions": [
+          ""
+        ],
+        "configuration": "./language-configuration.json"
+      }
+    ],
+    "localizations": [
+      {
+        "languageId": "zh-Hant",
+        "languageName": "JLANG",
+        "translations": [
+          {
+            "id": "vscode",
+            "path": ""
+          }
+        ],
+        "localizedLanguageName": "JLANG"
+      }
+    ],
+    "markdown": "github",
+    "markdown.previewStyles": [
+      ".themes/markdown/style.css"
+    ],
+    "menus": {
+      "view/title": [
+        {
+          "command": "nodeDependencies.refreshEntry",
+          "when": "view == nodeDependencies",
+          "group": "navigation"
+        },
+        {
+          "command": "nodeDependencies.addEntry",
+          "when": "view == nodeDependencies"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "nodeDependencies.editEntry",
+          "when": "view == nodeDependencies && viewItem == dependency",
+          "group": "inline"
+        },
+        {
+          "command": "nodeDependencies.deleteEntry",
+          "when": "view == nodeDependencies && viewItem == dependency"
+        }
+      ],
+      "commandPalette": [
+        {
+          "command": "myExtension.commentLine",
+          "when": "editorLangId == markdown"
+        }
+      ]
+    },
+    "productIconTheme": [
+      {
+        "id": "aliensAreBack",
+        "label": "Aliens Are Back",
+        "path": "./producticons/aliens-product-icon-theme.json"
+      }
+    ],
+    "qna": "marketplace",
+    "themes": [
+      {
+        "label": "Monokai",
+        "uiTheme": "vs-dark",
+        "path": "./themes/Monokai-color-theme.json"
+      }
+    ],
+    "views": {
+      "package-explorer": [
+        {
+          "id": "nodeDependencies",
+          "name": "Node Dependencies",
+          "when": "explorer"
+        }
+      ]
+    },
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "package-explorer",
+          "title": "Package Explorer",
+          "icon": "media/dep.svg"
+        }
+      ]
+    }
   },
-  "scripts": {
-    "vscode:prepublish": "pnpm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "pnpm run compile && pnpm run lint",
-    "lint": "eslint src --ext ts",
-    "test": "node ./out/test/runTest.js"
+  "activationEvents": [
+    "onStartupFinished"
+  ],
+  "dependencies": {
+    "ftp": "^0.3.10",
+    "marked": "^5.0.2"
   },
   "devDependencies": {
-    "@types/vscode": "^1.78.0",
+    "@antfu/eslint-config": "^0.38.4",
+    "@antfu/ni": "^0.21.2",
+    "@types/ftp": "^0.3.33",
     "@types/glob": "^8.1.0",
+    "@types/marked": "^4.3.0",
     "@types/mocha": "^10.0.1",
-    "@types/node": "16.x",
+    "@types/node": "^18.15.11",
+    "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "@vscode/test-electron": "^2.3.0",
+    "bumpp": "^9.1.0",
     "eslint": "^8.39.0",
+    "esno": "^0.16.3",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
+    "pnpm": "^7.29.1",
+    "rimraf": "^4.4.1",
+    "taze": "^0.10.1",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.4",
-    "@vscode/test-electron": "^2.3.0"
-  }
+    "vite": "^4.2.1",
+    "vitest": "^0.29.8",
+    "vsce": "^2.15.0"
+  },
+  "packageManager": "pnpm@7.29.1",
+  "engines": {
+    "vscode": "^1.78.0"
+  },
+  "icon": "images/icon.png",
+  "badges": [
+    {
+      "description": "Version",
+      "url": "https://vsmarketplacebadge.apphb.com/version-short/publisher.extensionName.svg",
+      "href": "https://marketplace.visualstudio.com/items?itemName=publisher.extensionName"
+    }
+  ],
+  "galleryBanner": {
+    "color": "#000000",
+    "theme": "dark"
+  },
+  "preview": true
 }
