--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "one-vscode",
   "displayName": "one-vscode",
   "publisher": "Juck",
-  "version": "0.0.2-beta.0",
+  "version": "0.0.2",
   "description": "",
   "categories": [
     "Other",
