--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "one-vscode",
   "displayName": "one-vscode",
-  "publisher": "Juck",
-  "version": "0.0.2",
+  "publisher": "JuckZ",
+  "version": "0.0.3",
   "description": "",
   "categories": [
     "Other",
