--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "one-vscode",
-  "displayName": "one-vscode",
+  "name": "timesavior",
+  "displayName": "timesavior",
   "publisher": "JuckZ",
   "version": "0.0.4",
   "description": "",
