feat: 1.增加插件描述

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "timesavior",
   "publisher": "JuckZ",
   "version": "0.0.4",
-  "description": "",
+  "description": "I will add more features in the future. But now, it's just a demo to help me study.",
   "categories": [
     "Other",
     "Themes",
