--- a/package.json
+++ b/package.json
@@ -56,6 +56,10 @@
   "contributes": {
     "commands": [
       {
+				"command": "editor.sortPackageJson",
+				"title": "Sort package.json"
+			},
+      {
         "command": "where-am-i.config",
         "category": "Where Am I",
         "title": "Config the name and color"
@@ -232,6 +236,10 @@
       ],
       "commandPalette": [
         {
+					"command": "editor.sortPackageJson",
+					"when": "resourceFilename == package.json"
+				},
+        {
           "command": "myExtension.commentLine",
           "when": "editorLangId == markdown"
         }
@@ -276,7 +284,10 @@
   ],
   "dependencies": {
     "ftp": "^0.3.10",
-    "marked": "^5.0.2"
+    "marked": "^5.0.2",
+    "read-pkg-up": "^7.0.1",
+    "resolve": "^1.22.2",
+    "sort-package-json": "^2.4.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.4",
@@ -286,6 +297,7 @@
     "@types/marked": "^5.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
+    "@types/resolve": "^1.20.2",
     "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
