--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timesavior",
-  "displayName": "timesavior",
+  "displayName": "TimeSavior",
   "publisher": "JuckZ",
   "version": "0.0.6",
   "description": "I will add more features in the future. But now, it's just a demo to help me study.",
@@ -159,7 +159,7 @@
     },
     "extensionDependencies": [],
     "extensionPack": [
-      "publisher.extensionName"
+      "JuckZ.timesavior"
     ],
     "grammars": [
       {
@@ -192,30 +192,6 @@
           ""
         ],
         "configuration": "./language-configuration.json"
-      }
-    ],
-    "localizations": [
-      {
-        "languageId": "zh-cn",
-        "languageName": "Chinese (Simplified)",
-        "localizedLanguageName": "简体中文",
-        "translations": [
-          {
-            "id": "vscode",
-            "path": "./i18n/zh-cn.json"
-          }
-        ]
-      },
-      {
-        "languageId": "en",
-        "languageName": "English",
-        "localizedLanguageName": "English",
-        "translations": [
-          {
-            "id": "vscode",
-            "path": "./i18n/en.json"
-          }
-        ]
       }
     ],
     "markdown": "github",
