--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "images/icon.png"
   ],
   "scripts": {
-    "build": "esno src/vitesse-theme/index.ts && tsup src/extension.ts --external vscode",
+    "build": "nr build:theme && nr build:icon && tsup src/extension.ts --external vscode",
+    "build:icon": "esno src/carbon-icon/build.ts",
+    "build:theme": "esno src/vitesse-theme/index.ts",
     "dev": "nr build --watch",
     "lint": "eslint \"src/**/*.ts\"",
     "lint1": "eslint . --fix",
@@ -232,11 +234,11 @@
         }
       ]
     },
-    "productIconTheme": [
+    "productIconThemes": [
       {
-        "id": "aliensAreBack",
-        "label": "Aliens Are Back",
-        "path": "./producticons/aliens-product-icon-theme.json"
+        "id": "icons-carbon",
+        "label": "Carbon Icons",
+        "path": "./icons/icons-carbon/icons-carbon.json"
       }
     ],
     "qna": "marketplace",
@@ -318,6 +320,8 @@
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.4",
     "@antfu/ni": "^0.21.2",
+    "@iconify/json": "^2.2.78",
+    "@types/fs-extra": "^9.0.13",
     "@types/ftp": "^0.3.33",
     "@types/glob": "^8.1.0",
     "@types/marked": "^5.0.0",
@@ -331,16 +335,19 @@
     "bumpp": "^9.1.0",
     "eslint": "^8.39.0",
     "esno": "^0.16.3",
+    "fs-extra": "^10.1.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
     "pnpm": "^7.29.1",
     "rimraf": "^4.4.1",
+    "svgo": "^1.3.2",
     "taze": "^0.10.1",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4",
     "vite": "^4.2.1",
     "vitest": "^0.29.8",
-    "vsce": "^2.15.0"
+    "vsce": "^2.15.0",
+    "webfonts-generator": "^0.4.0"
   },
   "extensionPack": [
     "Bito.Bito",
@@ -354,7 +361,6 @@
     "eamodio.gitlens",
     "naumovs.color-highlight",
     "richie5um2.vscode-sort-json",
-    "vscodevim.vim",
     "yzhang.markdown-all-in-one"
   ],
   "extensionDependencies": [
