feat: 1.优化markdown预览功能

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
 			"runtimeExecutable": "${execPath}",
 			"args": [
 				"--disable-extensions",
+				// TODO 如何开启指定插件
 				"--extensionDevelopmentPath=${workspaceFolder}",
 				"${workspaceFolder}/test-vault"
 			],
