--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,18 @@
 	// for the documentation about the extensions.json format
 	"recommendations": [
 		"dbaeumer.vscode-eslint",
-		"amodio.tsl-problem-matcher"
+		"amodio.tsl-problem-matcher",
+		"Bito.Bito",
+    "DavidAnson.vscode-markdownlint",
+    "GitHub.copilot-nightly",
+    "Gruntfuggly.todo-tree",
+    "antfu.icons-carbon",
+    "antfu.slidev",
+    "antfu.theme-vitesse",
+    "dbaeumer.vscode-eslint",
+    "eamodio.gitlens",
+    "naumovs.color-highlight",
+    "richie5um2.vscode-sort-json",
+    "yzhang.markdown-all-in-one"
 	]
 }
