--- a/package.json
+++ b/package.json
@@ -355,20 +355,7 @@
     "vsce": "^2.15.0",
     "webfonts-generator": "^0.4.0"
   },
-  "extensionPack": [
-    "Bito.Bito",
-    "DavidAnson.vscode-markdownlint",
-    "GitHub.copilot-nightly",
-    "Gruntfuggly.todo-tree",
-    "antfu.icons-carbon",
-    "antfu.slidev",
-    "antfu.theme-vitesse",
-    "dbaeumer.vscode-eslint",
-    "eamodio.gitlens",
-    "naumovs.color-highlight",
-    "richie5um2.vscode-sort-json",
-    "yzhang.markdown-all-in-one"
-  ],
+  "extensionPack": [],
   "extensionDependencies": [
     "fabiospampinato.vscode-open-in-github"
   ],
