feat:1.测试extensionDependencies和extensionPack的表现

--- a/package.json
+++ b/package.json
@@ -355,7 +355,9 @@
     "vsce": "^2.15.0",
     "webfonts-generator": "^0.4.0"
   },
-  "extensionPack": [],
+  "extensionPack": [
+    "naumovs.color-highlight"
+  ],
   "extensionDependencies": [
     "fabiospampinato.vscode-open-in-github"
   ],
