--- a/.npmrc
+++ b/.npmrc
@@ -2,3 +2,4 @@ enable-pre-post-scripts = true
 ignore-workspace-root-check = true
 node-linker = hoisted
 registry = https://registry.npm.taobao.org
+shamefully-hoist=true
