--- a/package.json
+++ b/package.json
@@ -59,6 +59,86 @@
   "contributes": {
     "commands": [
       {
+        "command": "nodeDependencies.refreshEntry",
+        "title": "Refresh",
+        "icon": {
+          "light": "resources/light/refresh.svg",
+          "dark": "resources/dark/refresh.svg"
+        }
+      },
+      {
+        "command": "nodeDependencies.addEntry",
+        "title": "Add"
+      },
+      {
+        "command": "nodeDependencies.editEntry",
+        "title": "Edit",
+        "icon": {
+          "light": "resources/light/edit.svg",
+          "dark": "resources/dark/edit.svg"
+        }
+      },
+      {
+        "command": "nodeDependencies.deleteEntry",
+        "title": "Delete"
+      },
+      {
+        "command": "ftpExplorer.refresh",
+        "title": "Refresh",
+        "icon": {
+          "light": "resources/light/refresh.svg",
+          "dark": "resources/dark/refresh.svg"
+        }
+      },
+      {
+        "command": "ftpExplorer.openFtpResource",
+        "title": "Open FTP Resource"
+      },
+      {
+        "command": "ftpExplorer.revealResource",
+        "title": "Reveal in FTP View"
+      },
+      {
+        "command": "jsonOutline.refresh",
+        "title": "Refresh",
+        "icon": {
+          "light": "resources/light/refresh.svg",
+          "dark": "resources/dark/refresh.svg"
+        }
+      },
+      {
+        "command": "jsonOutline.refreshNode",
+        "title": "Refresh",
+        "icon": {
+          "light": "resources/light/refresh.svg",
+          "dark": "resources/dark/refresh.svg"
+        }
+      },
+      {
+        "command": "jsonOutline.renameNode",
+        "title": "Rename"
+      },
+      {
+        "command": "fileExplorer.refreshFile",
+        "title": "Refresh",
+        "icon": {
+          "light": "resources/light/refresh.svg",
+          "dark": "resources/dark/refresh.svg"
+        }
+      },
+      {
+        "command": "fileExplorer.openFile",
+        "title": "Open File"
+      },
+      {
+        "command": "testView.reveal",
+        "title": "Test View: Reveal"
+      },
+      {
+        "command": "testView.changeTitle",
+        "title": "Test View: Change Title"
+      },
+      {
         "command": "timesavior.createPreviewPanel",
         "title": "Create TimeSavior Preview Panel"
       },
@@ -104,62 +184,73 @@
         "title": "deleteEntry"
       }
     ],
-    "configuration": {
-      "type": "object",
-      "title": "Project Name In StatusBar extension configuration",
-      "properties": {
-        "where-am-i.colorful": {
-          "type": "boolean",
-          "default": true,
-          "description": "Use color"
-        },
-        "where-am-i.color": {
-          "type": "string",
-          "default": "",
-          "description": "The color of status text. When not defined, a random color will be used based on the project name."
-        },
-        "where-am-i.align": {
-          "type": "string",
-          "enum": [
-            "left",
-            "right"
-          ],
-          "default": "left",
-          "description": "Defines The alignment of the label, requires restart of vscode"
-        },
-        "where-am-i.alignPriority": {
-          "type": "number",
-          "default": 100000,
-          "description": "Defines priority of the label. Higher values mean the label should be shown more to the left, requires restart of vscode"
-        },
-        "where-am-i.textTransfrom": {
-          "type": "string",
-          "enum": [
-            "none",
-            "uppercase",
-            "lowercase",
-            "capitalize"
-          ],
-          "default": "capitalize",
-          "description": "Defines project name text style inside template"
-        },
-        "where-am-i.icon": {
-          "type": "string",
-          "default": "folder-opened",
-          "description": "Codicon id"
-        },
-        "where-am-i.template": {
-          "type": "string",
-          "default": "{icon} {project-name}",
-          "description": "Defines template of project name placeholder"
-        },
-        "where-am-i.projectSetting": {
-          "type": "object",
-          "default": {},
-          "description": "Project preference"
+    "configuration": [
+      {
+        "title": "JSON Outline",
+        "properties": {
+          "jsonOutline.autorefresh": {
+            "type": "boolean",
+            "default": false
+          }
+        }
+      },
+      {
+        "type": "object",
+        "title": "Project Name In StatusBar extension configuration",
+        "properties": {
+          "where-am-i.colorful": {
+            "type": "boolean",
+            "default": true,
+            "description": "Use color"
+          },
+          "where-am-i.color": {
+            "type": "string",
+            "default": "",
+            "description": "The color of status text. When not defined, a random color will be used based on the project name."
+          },
+          "where-am-i.align": {
+            "type": "string",
+            "enum": [
+              "left",
+              "right"
+            ],
+            "default": "left",
+            "description": "Defines The alignment of the label, requires restart of vscode"
+          },
+          "where-am-i.alignPriority": {
+            "type": "number",
+            "default": 100000,
+            "description": "Defines priority of the label. Higher values mean the label should be shown more to the left, requires restart of vscode"
+          },
+          "where-am-i.textTransfrom": {
+            "type": "string",
+            "enum": [
+              "none",
+              "uppercase",
+              "lowercase",
+              "capitalize"
+            ],
+            "default": "capitalize",
+            "description": "Defines project name text style inside template"
+          },
+          "where-am-i.icon": {
+            "type": "string",
+            "default": "folder-opened",
+            "description": "Codicon id"
+          },
+          "where-am-i.template": {
+            "type": "string",
+            "default": "{icon} {project-name}",
+            "description": "Defines template of project name placeholder"
+          },
+          "where-am-i.projectSetting": {
+            "type": "object",
+            "default": {},
+            "description": "Project preference"
+          }
         }
       }
-    },
+    ],
     "grammars": [
       {
         "language": "juckz",
@@ -209,6 +300,29 @@
           "group": "navigation"
         },
         {
+          "command": "jsonOutline.renameNode",
+          "when": "view == jsonOutline"
+        },
+        {
+          "command": "nodeDependencies.addEntry",
+          "when": "view == nodeDependencies"
+        },
+        {
+          "command": "jsonOutline.refresh",
+          "when": "view == jsonOutline",
+          "group": "navigation"
+        },
+        {
+          "command": "ftpExplorer.refresh",
+          "when": "view == ftpExplorer",
+          "group": "navigation"
+        },
+        {
+          "command": "nodeDependencies.refreshEntry",
+          "when": "view == nodeDependencies",
+          "group": "navigation"
+        },
+        {
           "command": "nodeDependencies.addEntry",
           "when": "view == nodeDependencies"
         }
@@ -222,9 +336,35 @@
         {
           "command": "nodeDependencies.deleteEntry",
           "when": "view == nodeDependencies && viewItem == dependency"
+        },
+        {
+          "command": "jsonOutline.renameNode",
+          "when": "view == jsonOutline"
+        },
+        {
+          "command": "jsonOutline.refreshNode",
+          "when": "view == jsonOutline",
+          "group": "inline"
+        },
+        {
+          "command": "fileExplorer.refreshFile",
+          "when": "view == fileExplorer && viewItem == file",
+          "group": "inline"
+        },
+        {
+          "command": "nodeDependencies.editEntry",
+          "when": "view == nodeDependencies && viewItem == dependency",
+          "group": "inline"
+        },
+        {
+          "command": "nodeDependencies.deleteEntry",
+          "when": "view == nodeDependencies && viewItem == dependency"
         }
       ],
       "commandPalette": [
+        {
+          "command": "ftpExplorer.revealResource"
+        },
         {
           "command": "editor.sortPackageJson",
           "when": "resourceFilename == package.json"
@@ -291,15 +431,33 @@
     "views": {
       "explorer": [
         {
+          "id": "jsonOutline",
+          "name": "Json Outline",
+          "when": "jsonOutlineEnabled"
+        },
+        {
           "id": "ftpExplorer",
           "name": "FTP Explorer"
+        },
+        {
+          "id": "fileExplorer",
+          "name": "File Explorer"
+        },
+        {
+          "id": "testView",
+          "name": "Test View"
+        },
+        {
+          "id": "testViewDragAndDrop",
+          "name": "Test View Drag and Drop"
         }
       ],
       "package-explorer": [
         {
           "id": "nodeDependencies",
           "name": "Node Dependencies",
-          "when": "explorer"
+          "icon": "images/dep.svg",
+          "contextualTitle": "Package Explorer"
         }
       ]
     },
@@ -308,7 +466,7 @@
         {
           "id": "package-explorer",
           "title": "Package Explorer",
-          "icon": "media/dep.svg"
+          "icon": "images/dep.svg"
         }
       ]
     }
@@ -318,7 +476,10 @@
   ],
   "dependencies": {
     "ftp": "^0.3.10",
+    "jsonc-parser": "^3.2.0",
     "marked": "^5.0.2",
+    "minimist": "^1.2.8",
+    "mkdirp": "^3.0.1",
     "read-pkg-up": "^7.0.1",
     "resolve": "^1.22.2",
     "sort-package-json": "^1.57.0"
@@ -331,9 +492,11 @@
     "@types/ftp": "^0.3.33",
     "@types/glob": "^8.1.0",
     "@types/marked": "^5.0.0",
+    "@types/mkdirp": "^2.0.0",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.15.11",
     "@types/resolve": "^1.20.2",
+    "@types/rimraf": "^4.0.5",
     "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
